--- a/bin/index.html
+++ b/bin/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset='utf-8' />
-	<title>永利H5</title>
+	<title>永利禧礼</title>
 	<meta name='viewport' content='width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no'
 	/>
 	<meta name="renderer" content="webkit"/>
@@ -14,10 +14,12 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 	<meta http-equiv='expires' content='0' />
 	<meta http-equiv="Cache-Control" content="no-siteapp"/>
+	<!--<script src="//campaign.realh5.cn/2018/meizu/vconsole.min.js"></script>-->
 </head>
 <body>
 	<!--以下引用了常用类库，如果不使用，可以删除-->
 	
+	<script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1279301118'%3E%3C/span%3E%3Cscript src='https://w.cnzz.com/q_stat.php%3Fid%3D1279301118' type='text/javascript'%3E%3C/script%3E"));</script>
 	<!--核心包，封装了显示对象渲染，事件，时间管理，时间轴动画，缓动，消息交互,socket，本地存储，鼠标触摸，声音，加载，颜色滤镜，位图字体等-->
 	<script type="text/javascript" src="libs/laya.core.js"></script>
 	<!--封装了webgl渲染管线，如果使用webgl渲染，可以在初始化时调用Laya.init(1000,800,laya.webgl.WebGL);-->
@@ -29,7 +31,26 @@
 	<!--自定义的js(bin/js文件夹下)文件自动添加到下面jsfile模块标签里面里，js的顺序可以手动修改，修改后保留修改的顺序，新增加的js会默认依次追加到标签里-->
 	<!--删除标签，ide不会自动添加js文件，请谨慎操作-->
 	<!--jsfile--startTag-->
+	<script src="//res.wx.qq.com/open/js/jweixin-1.0.0.js"></script>
+	<script src="../src/jquery-3.4.1.min.js"></script>
+	<!--<script src="../src/fx.js"></script>-->
 	<script src="../src/LayaUISample.js"></script>
 	<!--jsfile--endTag-->
+	<script>
+        function onBridgeReady() {
+            WeixinJSBridge.call('hideOptionMenu');
+        }
+
+        if (typeof WeixinJSBridge == "undefined") {
+            if (document.addEventListener) {
+                document.addEventListener('WeixinJSBridgeReady', onBridgeReady, false);
+            } else if (document.attachEvent) {
+                document.attachEvent('WeixinJSBridgeReady', onBridgeReady);
+                document.attachEvent('onWeixinJSBridgeReady', onBridgeReady);
+            }
+        } else {
+            onBridgeReady();
+        }
+    </script>
 </body>
 </html>
